# rss-team-6

./: .gitignore  .gitmodules  video_settings.txt
orc_utils/: manifest.xml
src/gui_msgs/: CMakeLists.txt  package.xml
src/gui_msgs/msg/: GUIFiducialMsg.msg  GUIGraphMsg.msg  GUIParticleCloudMsg.msg  GUIPathMsg.msg  GUIPolyMsg.msg  GUIRectMsg.msg  PointMappingMsg.msg
src/lab5_msgs/: CMakeLists.txt  package.xml
src/lab6_msgs/: CMakeLists.txt  package.xml
src/motion/: .project  CMakeLists.txt  build.xml  package.xml
src/motion/src/: Listener.java
src/motion/src/Motor/: MotorListenerForOdometry.java  MotorListenerForPositionControl.java  MotorListenerForReverse.java  RobotPositionController.java
src/motion/src/Servo/: SafeServo.java  ServoControl.java  ServoListener.java
src/orc_utils/: CMakeLists.txt  package.xml
src/rosjava_msg_example/: CMakeLists.txt  package.xml
src/rosjava_msg_pkg/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
src/rosjava_msg_pkg/gradle/wrapper/: gradle-wrapper.properties
src/rosjava_msg_pkg/gui_msgs/: build.gradle
src/rosjava_msg_pkg/lab5_msgs/: build.gradle
src/rosjava_msg_pkg/lab6_msgs/: build.gradle
src/rosjava_msg_pkg/rosjava_msg_example/: build.gradle
src/rosjava_msg_pkg/rss_msgs/: build.gradle
src/rosjava_pkg/: CMakeLists.txt  build.gradle  env-loader-eeepc.sh  env-loader.sh  package.xml  settings.gradle
src/rosjava_pkg/gradle/wrapper/: gradle-wrapper.properties
src/rosjava_pkg/lab4/: .classpath  CMakeLists.txt.bak  build.gradle
src/rosjava_pkg/lab4/launch/: config.biakat.launch  config.gurtej.launch  config.launch  config.netbook.launch  lab4.netbook.launch  servo.launch  servo.netbook.launch  test.biakat.launch  test.gurtej.launch  test.katharine.launch
src/rosjava_pkg/lab4/snapshots/: imageObjects.ser  imageObjects.txt
src/rosjava_pkg/lab4/src/VisualServo/: Blob.java  BlobTrackingChallenge.java  Image.java  VisionGUI.java
src/rosjava_pkg/lab4/src/main/java/VisualServo/: Blob.java  BlobTracking.java  BlobTrackingChallenge.java  ConnectedComponents.java  Histogram.java  HistogramTest.java  Image.java  Tester.java  UseSerialized.java  VisionGUI.java  VisualServo.java
src/rosjava_pkg/maps/: bonfire-empty-rect.map  empty-rect.map  global-nav-maze-2011-basic.map
src/rosjava_pkg/motion/src/main/java/motion/: Listener.java
src/rosjava_pkg/orc_utils/: build.gradle
src/rosjava_pkg/orc_utils/src/main/java/orc/: ADIS16350.java  ADXL345.java  AX12ChangeID.java  AX12Finder.java  AX12Servo.java  AX12Status.java  AnalogInput.java  DigitalInput.java  DigitalOutput.java  DigitalPWM.java  Gyro.java  IRRangeFinder.java  Motor.java  Nunchuck.java  Orc.java  OrcListener.java  OrcResponse.java  OrcSetup.java  OrcStatus.java  SRF02.java  (+3 more)
src/rosjava_pkg/rosjava_prj_example/: build.gradle
src/rosjava_pkg/sim_orc_utils/: build.gradle
src/rss_msgs/: CMakeLists.txt  package.xml
src/rss_msgs/msg/: BallLocationMsg.msg  FiducialMsg.msg  InitializedMsg.msg  MapMsg.msg  MotorVelMsg.msg  OdometryMsg.msg  ReverseMsg.msg  SimulatorMsg.msg  SonarMsg.msg  VelocityMsg.msg
src/rss_msgs/src/rss_msgs/msg/: _ArmMsg.py  _BallLocationMsg.py  __init__.py
(+26 files in other folders)
