<package>
  <name>motion</name>
  <description>motion</description>
  <maintainer email="rss-team-6@mit.edu">rss-team-6</maintainer>
  <author email="rss-team-6@mit.edu">rss-team-6</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/motion</url>
  <version>0.1.0</version>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>rss_msgs</build_depend>
  <build_depend>orc_utils</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>
  <run_depend>rss_msgs</run_depend>
  <run_depend>orc_utils</run_depend>

  <export>
    <rosjava-pathelement location="target/" groupId="org.ros" artifactId="org.ros.rss.motion" version="0.0" built="true" />
  </export>
</package>


