<package>
  <name>orc_utils</name>
  <description>orc_utils</description>
  <maintainer email="rss-staff@mit.edu">rss-staff</maintainer>
  <author email="rss-staff@mit.edu">rss-staff</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/orc_utils</url>
  <version>0.1.0</version>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_message</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>


  <export>
    <rosjava-pathelement location="lib/" groupId="org.ros" artifactId="uORCInterface" version="0.0" built="true" />

    <rosjava-pathelement location="lib/" groupId="org.ros" artifactId="orc" version="0.0" built="true" />
  </export>
</package>


